--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^3.5.2"
-  },
-  "devDependencies": {
+    "web-vitals": "^3.5.2",
     "@react-buddy/ide-toolbox": "^2.4.0",
     "@react-buddy/palette-mui": "^5.0.1"
   },
