feat: Update Keycloak secret handling in Kubernetes deployment
Update Kubernetes deployment file to use the REACT_APP_KEYCLOAK_SECRET
environment variable instead of individual secret keys for Keycloak
configuration. This improves security and simplifies the deployment setup.

--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -13,7 +13,7 @@ COPY public ./public
 COPY src ./src
 COPY public ./public
 COPY tsconfig.json ./
-COPY .env.production ./.env
+#COPY .env.production ./.env
 
 # Install dependencies
 FROM base AS dependencies
