--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -6,14 +6,12 @@ RUN corepack enable
 
 ## Copy the files
 WORKDIR /frontend
-COPY vendor ./vendor
 COPY package*.json ./
 COPY pnpm-lock.yaml ./
 COPY public ./public
 COPY src ./src
 COPY public ./public
 COPY tsconfig.json ./
-#COPY .env.production ./.env
 
 # Install dependencies
 FROM base AS dependencies
@@ -22,17 +20,14 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 # Build
 FROM base AS build
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+ARG KEYCLOAK_SECRET
+ENV REACT_APP_KEYCLOAK_SECRET=${KEYCLOAK_SECRET}
 RUN pnpm build
 
 # Runner
-FROM containers.chewed-k8s.net/docker_hub_cache/library/nginx:1.25-alpine AS runner
-COPY --from=dependencies /frontend/node_modules /frontend/node_modules
-COPY --from=build /frontend/build /usr/share/nginx/html
-COPY ./k8s/nginx.conf /etc/nginx/conf.d/default.conf
+FROM containers.chewed-k8s.net/docker_hub_cache/library/node:20-alpine AS runner
+WORKDIR /runner
+COPY --from=build /frontend/build /runner
+RUN npm install -g serve
 
-RUN apk update
-RUN apk upgrade
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["serve", "-s", "/runner", "-l", "80"]
