--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,68 +1,98 @@
-  version: "3"
-  vars:
-    SERVICE_NAME: frontend
-    NAMESPACE: flags-gg
-    GIT_COMMIT_HASH: sh -c "git rev-parse --short HEAD"
-  tasks:
-    get-latest-tag:
-      cmds:
-        - |
-          latest_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
-          if [[ -z "$latest_tag" ]]; then
-            echo "0.0.1" > .latest_tag
-          else
-            echo $latest_tag | awk -F. '{printf "%d.%d.%d", $1, $2, $3+1}' > .latest_tag
-          fi
-      silent: true
-    clean-ag-file:
-      cmd: rm .latest_tag
-    test:
-      cmd: npm test
+version: "3"
+vars:
+  SERVICE_NAME: frontend
+  NAMESPACE: flags-gg
+tasks:
+  make-temp-files:
+    cmds:
+      - task: get-latest-tag
+      - task: get-commit-hash
+  get-latest-tag:
+    cmds:
+      - |
+        git fetch --tags
+        latest_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
+        if [[ -z "$latest_tag" ]]; then
+          echo "0.0.1" > .latest_tag
+        else
+          echo $latest_tag | awk -F. '{printf "%d.%d.%d", $1, $2, $3+1}' > .latest_tag
+        fi
+    silent: true
+  get-commit-hash:
+    cmd: git rev-parse --short HEAD > .commit_hash
+    silent: true
+  clean-git-file:
+    cmds:
+      - rm .latest_tag
+      - rm .commit_hash
+  test:
+    cmd: npm test
 
-    # Publish Commands
-    publish-images:
-      cmds:
-        - nerdctl push containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:{{.GIT_COMMIT_HASH}} --all-platforms
-        - nerdctl push containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest --all-platforms
+  # Publish Commands
+  publish-images:
+    cmds:
+      - task: get-commit-hash
+        vars:
+          COMMIT_HASH:
+            sh: cat .commit_hash
+      - nerdctl push containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:{{.COMMIT_HASH}} --all-platforms
+      - nerdctl push containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest --all-platforms
+    vars:
+      COMMIT_HASH:
+        sh: cat .commit_hash
 
-    # Build Commands
-    build-images:
-      cmds:
-        - task: get-latest-tag
-        - nerdctl build --platform=amd64,arm64 --tag containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:{{.GIT_COMMIT_HASH}} --build-arg VERSION={{.LATEST_TAG}} --build-arg BUILD={{.GIT_COMMIT_HASH}} --build-arg SERVICE_NAME={{.SERVICE_NAME}} -f ./k8s/Containerfile .
-        - nerdctl tag containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:{{.GIT_COMMIT_HASH}} containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest
-        - task: clean-tag-file
-      vars:
-        LATEST_TAG:
-          sh: cat .latest_tag
-    build-push-latest:
-      cmds:
-        - task: get-latest-tag
-        - nerdctl build --platform=amd64,arm64 --tag containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest --build-arg VERSION={{.LATEST_TAG}} --build-arg BUILD={{.GIT_COMMIT_HASH}} --build-arg SERVICE_NAME={{.SERVICE_NAME}} -f ./k8s/Containerfile .
-        - nerdctl push containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest --all-platforms
-        - task: clean-tag-file
-      vars:
-        LATEST_TAG:
-          sh: cat .latest_tag
-    build:
-      cmds:
-        - task: build-images
+  # Build Commands
+  build-images:
+    cmds:
+      - task: get-latest-tag
+        vars:
+          LATEST_TAG:
+            sh: cat .latest_tag
+      - task: get-commit-hash
+        vars:
+          COMMIT_HASH:
+            sh: cat .commit_hash
+      - nerdctl build --platform=amd64,arm64 --tag containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:{{.COMMIT_HASH}} --build-arg VERSION={{.LATEST_TAG}} --build-arg BUILD={{.COMMIT_HASH}} --build-arg SERVICE_NAME={{.SERVICE_NAME}} --build-arg KEYCLOAK_SECRET={{.KEYCLOAK_SECRET}} -f ./k8s/Containerfile .
+      - nerdctl tag containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:{{.COMMIT_HASH}} containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest
+    vars:
+      LATEST_TAG:
+        sh: cat .latest_tag
+      COMMIT_HASH:
+        sh: cat .commit_hash
+      KEYCLOAK_SECRET:
+        sh: cat keycloak.secret
+  build-push-latest:
+    cmds:
+      - task: get-latest-tag
+      - task: get-commit-hash
+      - nerdctl build --platform=amd64,arm64 --tag containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest --build-arg VERSION={{.LATEST_TAG}} --build-arg BUILD={{.COMMIT_HASH}} --build-arg SERVICE_NAME={{.SERVICE_NAME}} --build-arg KEYCLOAK_SECRET={{.KEYCLOAK_SECRET}} -f ./k8s/Containerfile .
+      - nerdctl push containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest --all-platforms
+    vars:
+      LATEST_TAG:
+        sh: cat .latest_tag
+      COMMIT_HASH:
+        sh: cat .commit_hash
+      KEYCLOAK_SECRET:
+        sh: cat keycloak.secret
 
-    # Deploy Commands
-    deploy:
-      cmd: kubectl set image deployment/{{.SERVICE_NAME}} {{.SERVICE_NAME}}=containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:{{.GIT_COMMIT_HASH}} -n {{.NAMESPACE}}
-    deploy-latest:
-      cmds:
-        - kubectl set image deployment/{{.SERVICE_NAME}} {{.SERVICE_NAME}}=containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest -n {{.NAMESPACE}}
-        - kubectl rollout restart deployment/{{.SERVICE_NAME}} -n {{.NAMESPACE}}
+  build:
+    cmds:
+      - task: build-images
 
-    # Extras
-    build-deploy:
-      cmds:
-        - task: build-images
-        - task: deploy
-    build-deploy-latest:
-      cmds:
-        - task: build-push-latest
-        - task: deploy-latest
+  # Deploy Commands
+  deploy:
+    cmd: kubectl set image deployment/{{.SERVICE_NAME}} {{.SERVICE_NAME}}=containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:{{.GIT_COMMIT_HASH}} -n {{.NAMESPACE}}
+  deploy-latest:
+    cmds:
+      - kubectl set image deployment/{{.SERVICE_NAME}} {{.SERVICE_NAME}}=containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest -n {{.NAMESPACE}}
+      - kubectl rollout restart deployment/{{.SERVICE_NAME}} -n {{.NAMESPACE}}
 
+  # Extras
+  build-deploy:
+    cmds:
+      - task: build-images
+      - task: deploy
+  build-deploy-latest:
+     cmds:
+      - task: build-push-latest
+      - task: deploy-latest
