--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -26,7 +26,7 @@ spec:
         - name: docker-registry-secret
       containers:
         - name: frontend
-          image: containers.chewed-k8s.net/flags-gg/frontend:v0.0.1
+          image: containers.chewed-k8s.net/flags-gg/frontend:latest
           ports:
             - containerPort: 80
               protocol: TCP
