--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
             VERSION=${{ steps.meta.outputs.tags }}
             BUILD=${{ github.sha }}
             SERVICE_NAME=frontend
-            REACT_APP_KEYCLOAK_SECRET=${{ secrets.KEYCLOAK_SECRET }}
+            KEYCLOAK_SECRET=${{ secrets.KEYCLOAK_SECRET }}
 #  deploy:
 #    runs-on: ubuntu-latest
 #    needs: build
