feat: Add Footer component to Dashboard and Homepage
Add Footer component to Dashboard and Homepage to display company information,
copyright details, build hash and tag, and social media links. This improves
the user experience by providing consistent branding and navigation elements
across the application.

--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -30,4 +30,7 @@ WORKDIR /runner
 COPY --from=build /frontend/build /runner
 RUN npm install -g serve
 
+ENV REACT_APP_COMMIT_HASH=${BUILD}
+ENV REACT_APP_GIT_TAG=${VERSION}
+
 CMD ["serve", "-s", "/runner", "-l", "80"]
