build: Update environment variables for React app
Update the environment variables for the React app to include the build
and version information. This ensures the correct information is displayed
in the app.

--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -30,6 +30,8 @@ WORKDIR /runner
 COPY --from=build /frontend/build /runner
 RUN npm install -g serve
 
+ARG BUILD
+ARG VERSION
 ENV REACT_APP_COMMIT_HASH=${BUILD}
 ENV REACT_APP_GIT_TAG=${VERSION}
 
