🔧 Update environment variables for build process

--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -20,8 +20,17 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 # Build
 FROM base AS build
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+
+## Set Args
 ARG KEYCLOAK_SECRET
+ARG BUILD
+ARG VERSION
+
+## Set Envs for build
 ENV REACT_APP_KEYCLOAK_SECRET=${KEYCLOAK_SECRET}
+ENV REACT_APP_COMMIT_HASH=${BUILD}
+ENV REACT_APP_GIT_TAG=${VERSION}
+
 RUN pnpm build
 
 # Runner
@@ -29,10 +38,5 @@ FROM containers.chewed-k8s.net/docker_hub_cache/library/node:20-alpine AS runner
 WORKDIR /runner
 COPY --from=build /frontend/build /runner
 RUN npm install -g serve
-
-ARG BUILD
-ARG VERSION
-ENV REACT_APP_COMMIT_HASH=${BUILD}
-ENV REACT_APP_GIT_TAG=${VERSION}
 
 CMD ["serve", "-s", "/runner", "-l", "80"]
