✨ Add config-overrides.js file for custom webpack configuration

--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -12,6 +12,7 @@ COPY public ./public
 COPY src ./src
 COPY public ./public
 COPY tsconfig.json ./
+COPY config-overrides.js ./
 
 # Install dependencies
 FROM base AS dependencies
