--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -21,8 +21,8 @@ ARG VERSION
 
 ## Set Envs for build
 ENV REACT_APP_KEYCLOAK_SECRET=${KEYCLOAK_SECRET}
-ENV REACT_APP_COMMIT_HASH=${BUILD}
-ENV REACT_APP_GIT_TAG=${VERSION}
+#$ENV REACT_APP_COMMIT_HASH=${BUILD}
+#ENV REACT_APP_GIT_TAG=${VERSION}
 
 # Install dependencies
 FROM base AS dependencies
@@ -30,16 +30,16 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 
 ## Set Envs for build
 ENV REACT_APP_KEYCLOAK_SECRET=${KEYCLOAK_SECRET}
-ENV REACT_APP_COMMIT_HASH=${BUILD}
-ENV REACT_APP_GIT_TAG=${VERSION}
+#ENV REACT_APP_COMMIT_HASH=${BUILD}
+#ENV REACT_APP_GIT_TAG=${VERSION}
 
 # Build
 FROM base AS build
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 ## Set Envs for build
 ENV REACT_APP_KEYCLOAK_SECRET=${KEYCLOAK_SECRET}
-ENV REACT_APP_COMMIT_HASH=${BUILD}
-ENV REACT_APP_GIT_TAG=${VERSION}
+#ENV REACT_APP_COMMIT_HASH=${BUILD}
+#ENV REACT_APP_GIT_TAG=${VERSION}
 
 RUN pnpm build
 
@@ -51,7 +51,7 @@ RUN npm install -g serve
 
 ## Set Envs for build
 ENV REACT_APP_KEYCLOAK_SECRET=${KEYCLOAK_SECRET}
-ENV REACT_APP_COMMIT_HASH=${BUILD}
-ENV REACT_APP_GIT_TAG=${VERSION}
+#ENV REACT_APP_COMMIT_HASH=${BUILD}
+#ENV REACT_APP_GIT_TAG=${VERSION}
 
 CMD ["serve", "-s", "/runner", "-l", "80"]
