--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -14,6 +14,13 @@ COPY public ./public
 COPY tsconfig.json ./
 COPY config-overrides.js ./
 
+# Install dependencies
+FROM base AS dependencies
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile --production
+
+# Build
+FROM dependencies AS build
+
 ## Set Args
 ARG KEYCLOAK_SECRET
 ARG BUILD
@@ -21,26 +28,10 @@ ARG VERSION
 
 ## Set Envs for build
 ENV REACT_APP_KEYCLOAK_SECRET=${KEYCLOAK_SECRET}
-#$ENV REACT_APP_COMMIT_HASH=${BUILD}
+ENV REACT_APP_COMMIT_HASH=${BUILD}
 #ENV REACT_APP_GIT_TAG=${VERSION}
 
-# Install dependencies
-FROM base AS dependencies
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile --production
-
-## Set Envs for build
-ENV REACT_APP_KEYCLOAK_SECRET=${KEYCLOAK_SECRET}
-#ENV REACT_APP_COMMIT_HASH=${BUILD}
-#ENV REACT_APP_GIT_TAG=${VERSION}
-
-# Build
-FROM base AS build
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
-## Set Envs for build
-ENV REACT_APP_KEYCLOAK_SECRET=${KEYCLOAK_SECRET}
-#ENV REACT_APP_COMMIT_HASH=${BUILD}
-#ENV REACT_APP_GIT_TAG=${VERSION}
-
 RUN pnpm build
 
 # Runner
@@ -48,10 +39,5 @@ FROM containers.chewed-k8s.net/docker_hub_cache/library/node:20-alpine AS runner
 WORKDIR /runner
 COPY --from=build /frontend/build /runner
 RUN npm install -g serve
-
-## Set Envs for build
-ENV REACT_APP_KEYCLOAK_SECRET=${KEYCLOAK_SECRET}
-#ENV REACT_APP_COMMIT_HASH=${BUILD}
-#ENV REACT_APP_GIT_TAG=${VERSION}
 
 CMD ["serve", "-s", "/runner", "-l", "80"]
