--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,7 @@ jobs:
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-buildx-
       - name: Login Github
         uses: docker/login-action@v3
         with:
@@ -56,8 +55,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           push: true
           build-args:
-            VERSION=${{ startsWith(github.ref, 'refs/tags/') && steps.extract_tag.outputs.tag || github.sha }}
-            BUILD=${{ github.sha }}
+            GIT_VERSION=${{ startsWith(github.ref, 'refs/tags/') && steps.extract_tag.outputs.tag || github.sha }}
+            GIT_BUILD=${{ github.sha }}
             SERVICE_NAME=frontend
             KEYCLOAK_SECRET=${{ secrets.KEYCLOAK_SECRET }}
 #  deploy:
