--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -24,11 +24,10 @@ ARG GIT_BUILD
 ARG GIT_VERSION
 
 ## Set Envs for build
-ENV REACT_APP_KEYCLOAK_SECRET=${KEYCLOAK_SECRET}
+ENV REACT_APP_KEYCLOAK_SECRET=$KEYCLOAK_SECRET}
 ENV REACT_APP_COMMIT_HASH=${GIT_BUILD}
 #ENV REACT_APP_GIT_TAG=${GIT_VERSION}
 
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 RUN pnpm build
 
 # Runner
