--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -24,9 +24,9 @@ ARG GIT_BUILD
 ARG GIT_VERSION
 
 ## Set Envs for build
-ENV REACT_APP_KEYCLOAK_SECRET=$KEYCLOAK_SECRET}
-ENV REACT_APP_COMMIT_HASH=${GIT_BUILD}
-#ENV REACT_APP_GIT_TAG=${GIT_VERSION}
+ENV REACT_APP_KEYCLOAK_SECRET=$KEYCLOAK_SECRET
+ENV REACT_APP_COMMIT_HASH=$GIT_BUILD
+ENV REACT_APP_GIT_TAG=$GIT_VERSION
 
 RUN pnpm build
 
