--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.72",
     "@types/react-dom": "^18.2.22",
+    "extend-expect": "link:@testing-library/jest-dom/extend-expect",
+    "jest": "^29.7.0",
     "oidc-client-ts": "^3.0.1",
     "react": "^18.2.0",
     "react-app-rewire-alias": "^1.1.7",
@@ -25,6 +27,7 @@
     "react-oidc-context": "^3.0.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^4.9.5",
     "web-vitals": "^3.5.2"
   },
@@ -50,6 +53,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./src/setupTests.ts"
     ]
   }
 }
