feat: Add notifications functionality to Dashboard
- Added NotificationsPopover component with notification display functionality
- Implemented useEffect to fetch notifications on component mount
- Added unreadNotifications count for display on the Avatar badge
- Updated Avatar component to include badge for unread notifications
- Included NotificationsPopover in Sidebar for notification display
- Imported necessary components, interfaces, and hooks for notifications

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@phosphor-icons/react": "^2.0.15",
     "@react-buddy/ide-toolbox": "^2.4.0",
     "@react-buddy/palette-mui": "^5.0.2",
     "@testing-library/jest-dom": "^5.17.0",
