--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.72",
     "@types/react-dom": "^18.2.22",
+    "apexcharts": "^3.48.0",
     "extend-expect": "link:@testing-library/jest-dom/extend-expect",
     "jest": "^29.7.0",
     "oidc-client-ts": "^3.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
