--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@mui/material": "^5.15.15",
     "@phosphor-icons/react": "^2.1.4",
     "apexcharts": "^3.48.0",
+    "fast-deep-equal": "^3.1.3",
+    "isomorphic-unfetch": "^4.0.2",
+    "node-fetch": "^3.3.2",
     "oidc-client-ts": "^3.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-oidc-context": "^3.0.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "unfetch": "^5.0.0"
   },
   "devDependencies": {
     "@react-buddy/ide-toolbox": "^2.4.0",
