--- a/package.json
+++ b/package.json
@@ -13,22 +13,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@flags-gg/react": "^0.2.1",
+    "@flags-gg/react-library": "^1.0.0",
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@phosphor-icons/react": "^2.1.4",
     "apexcharts": "^3.48.0",
-    "fast-deep-equal": "^3.1.3",
-    "isomorphic-unfetch": "^4.0.2",
     "node-fetch": "^3.3.2",
     "oidc-client-ts": "^3.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-oidc-context": "^3.0.0",
-    "react-router-dom": "^6.22.3",
-    "unfetch": "^5.0.0"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@react-buddy/ide-toolbox": "^2.4.0",
