refactor: Update paths in tsconfig.json to src directory (#123)
Update the paths in tsconfig.json to point to the src directory for better
organization and consistency. Also removed unused imports in
src/pages/Dashboard/components/Requests/PerAgent/index.tsx file.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,11 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@L/*": ["./pages/*"],
-      "@C/*": ["./components/*"],
-      "@HC/*": ["./pages/Homepage/components/*"],
-      "@DC/*": ["./pages/Dashboard/components/*"],
-      "@DL/*": ["./pages/Dashboard/lib/*"],
+      "@/*": ["src/*"],
+      "@C/*": ["src/components/*"],
+      "@HC/*": ["src/pages/Homepage/components/*"],
+      "@DC/*": ["src/pages/Dashboard/components/*"],
+      "@DL/*": ["src/pages/Dashboard/lib/*"],
     },
   },
   "include": ["src"],
