--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,11 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@/*": ["src/*"],
-      "@C/*": ["src/components/*"],
-      "@HC/*": ["src/pages/Homepage/components/*"],
-      "@DC/*": ["src/pages/Dashboard/components/*"],
-      "@DL/*": ["src/pages/Dashboard/lib/*"],
+      "@/*": ["./src/*"],
+      "@C/*": ["./src/components/*"],
+      "@HC/*": ["./src/pages/Homepage/components/*"],
+      "@DC/*": ["./src/pages/Dashboard/components/*"],
+      "@DL/*": ["./src/pages/Dashboard/lib/*"],
     },
   },
   "include": ["src"],
