build: Add environment variables for flags company, agent, and environment ID
Add new environment variables for company ID, agent ID, and environment ID to be
used in the application. This allows for easier configuration and customization
based on these IDs.

--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -30,6 +30,9 @@ ARG GIT_VERSION
 ENV VITE_KEYCLOAK_SECRET=$KEYCLOAK_SECRET
 ENV VITE_COMMIT_HASH=$GIT_BUILD
 ENV VITE_GIT_TAG=$GIT_VERSION
+ENV VITE_FLAGS_COMPANY_ID=$FLAGS_COMPANY_ID
+ENV VITE_FLAGS_AGENT_ID=$FLAGS_AGENT_ID
+ENV VITE_FLAGS_ENVIRONMENT_ID=$FLAGS_ENVIRONMENT_ID
 
 RUN pnpm build
 
