--- a/.github/workflows/pulls.yml
+++ b/.github/workflows/pulls.yml
@@ -1,5 +1,6 @@
 name: Pull Requests
 on:
+  workflow_dispatch:
   push:
     branches-ignore:
       - main
@@ -23,6 +24,24 @@ jobs:
           version: 8
       - run: pnpm install --frozen-lockfile
       #- run: pnpm test
+  qodana:
+    needs: test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      checks: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
+      - name: 'Qodana Scan'
+        uses: JetBrains/qodana-action@v2023.3.2
+        with:
+          upload-result: true
+        env:
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
   automerge:
     runs-on: ubuntu-latest
     permissions:
