--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -15,6 +15,7 @@ COPY tsconfig.json ./
 COPY vite.config.ts ./
 COPY tsconfig.json ./
 COPY tsconfig.node.json ./
+COPY .eslintrc.cjs ./
 COPY index.html ./
 
 # Build
@@ -33,6 +34,7 @@ ENV VITE_GIT_TAG=$GIT_VERSION
 ENV VITE_FLAGS_COMPANY_ID=$FLAGS_COMPANY_ID
 ENV VITE_FLAGS_AGENT_ID=$FLAGS_AGENT_ID
 ENV VITE_FLAGS_ENVIRONMENT_ID=$FLAGS_ENVIRONMENT_ID
+ENV VITE_FLAGS_API_URL=$FLAGS_API_URL
 
 RUN pnpm build
 
