--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -31,11 +31,19 @@ spec:
             - containerPort: 80
               protocol: TCP
           env:
-            - name: REACT_APP_KEYCLOAK_SECRET
+            - name: VITE_KEYCLOAK_SECRET
               valueFrom:
                 secretKeyRef:
                   name: frontend-secrets
                   key: keycloak-client-secret
+            - name: VITE_FLAGS_API_SERVER
+              value: "https://api.flags.gg/v1"
+            - name: VITE_FLAGS_COMPANY_ID
+              value: "85ccae4e-7bb3-4ec5-bfc7-b08a80e59328"
+            - name: VITE_FLAGS_AGENT_ID
+              value: "c778cf4b-83f1-4c53-951e-604102c84898"
+            - name: VITE_FLAGS_ENVIRONMENT_ID
+              value: "81aca98e-3b01-4c3c-a4cf-c7eee26185c5"
 ---
 apiVersion: v1
 kind: Service
