--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -113,6 +113,7 @@ tasks:
   build-deploy:
     cmds:
       - task: build-images
+      - task: publish-images
       - task: deploy
   build-deploy-latest:
      cmds:
