build: Add flags for Company ID, Agent ID, Environment ID, and API URL

--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -26,6 +26,10 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 ARG KEYCLOAK_SECRET
 ARG GIT_BUILD
 ARG GIT_VERSION
+ARG FLAGS_COMPANY_ID
+ARG FLAGS_AGENT_ID
+ARG FLAGS_ENVIRONMENT_ID
+ARG FLAGS_API_URL
 
 ## Set Envs for build
 ENV VITE_KEYCLOAK_SECRET=$KEYCLOAK_SECRET
