build: Update build arguments and environment variable names

--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -38,7 +38,7 @@ ENV VITE_GIT_TAG=$GIT_VERSION
 ENV VITE_FLAGS_COMPANY_ID=$FLAGS_COMPANY_ID
 ENV VITE_FLAGS_AGENT_ID=$FLAGS_AGENT_ID
 ENV VITE_FLAGS_ENVIRONMENT_ID=$FLAGS_ENVIRONMENT_ID
-ENV VITE_FLAGS_API_URL=$FLAGS_API_URL
+ENV VITE_FLAGS_API_SERVER=$FLAGS_API_URL
 
 RUN pnpm build
 
