--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -56,8 +56,8 @@ tasks:
         nerdctl build \
           --platform=amd64,arm64 \
           --tag containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:{{.COMMIT_HASH}} \
-          --build-arg VERSION={{.LATEST_TAG}} \
-          --build-arg BUILD={{.COMMIT_HASH}} \
+          --build-arg GIT_VERSION={{.LATEST_TAG}} \
+          --build-arg GIT_BUILD={{.COMMIT_HASH}} \
           --build-arg SERVICE_NAME={{.SERVICE_NAME}} \
           --build-arg KEYCLOAK_SECRET={{.KEYCLOAK_SECRET}} \
           --build-arg FLAGS_API_SERVER="https://api.flags.gg/v1" \
