build: Update API server URL in container settings
Changed the API server URL environment variable to FLAGS_SERVER instead
of FLAGS_API_URL in the k8s Containerfile and Taskfile.yml to align with
the latest configuration.

--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -29,7 +29,7 @@ ARG GIT_VERSION
 ARG FLAGS_COMPANY_ID
 ARG FLAGS_AGENT_ID
 ARG FLAGS_ENVIRONMENT_ID
-ARG FLAGS_API_URL
+ARG FLAGS_SERVER
 
 ## Set Envs for build
 ENV VITE_KEYCLOAK_SECRET=$KEYCLOAK_SECRET
@@ -38,7 +38,7 @@ ENV VITE_GIT_TAG=$GIT_VERSION
 ENV VITE_FLAGS_COMPANY_ID=$FLAGS_COMPANY_ID
 ENV VITE_FLAGS_AGENT_ID=$FLAGS_AGENT_ID
 ENV VITE_FLAGS_ENVIRONMENT_ID=$FLAGS_ENVIRONMENT_ID
-ENV VITE_FLAGS_API_SERVER=$FLAGS_API_URL
+ENV VITE_FLAGS_API_SERVER=$FLAGS_SERVER
 
 RUN pnpm build
 
