--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -60,7 +60,7 @@ tasks:
           --build-arg GIT_BUILD={{.COMMIT_HASH}} \
           --build-arg SERVICE_NAME={{.SERVICE_NAME}} \
           --build-arg KEYCLOAK_SECRET={{.KEYCLOAK_SECRET}} \
-          --build-arg FLAGS_API_SERVER="https://api.flags.gg/v1" \
+          --build-arg FLAGS_SERVER="https://api.flags.gg/v1" \
           --build-arg FLAGS_COMPANY_ID=85ccae4e-7bb3-4ec5-bfc7-b08a80e59328 \
           --build-arg FLAGS_AGENT_ID=c778cf4b-83f1-4c53-951e-604102c84898 \
           --build-arg FLAGS_ENVIRONMENT_ID=81aca98e-3b01-4c3c-a4cf-c7eee26185c5 \
