--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.18",
+    "@mui/x-charts": "^7.5.0",
     "@phosphor-icons/react": "^2.1.5",
     "apexcharts": "^3.49.1",
+    "jotai": "^2.8.0",
     "oidc-client-ts": "^3.0.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
