feat: Add form to create projects in Dashboard
Added a form to create projects in the Projects component of the Dashboard.
Now users can input a project name and submit to create a new project.

--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -10,7 +10,6 @@ COPY package*.json ./
 COPY pnpm-lock.yaml ./
 COPY public ./public
 COPY src ./src
-COPY public ./public
 COPY tsconfig.json ./
 COPY vite.config.ts ./
 COPY tsconfig.json ./
@@ -26,7 +25,7 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 ARG KEYCLOAK_SECRET
 ARG GIT_BUILD
 ARG GIT_VERSION
-ARG FLAGS_COMPANY_ID
+ARG FLAGS_PROJECT_ID
 ARG FLAGS_AGENT_ID
 ARG FLAGS_ENVIRONMENT_ID
 ARG FLAGS_SERVER
@@ -35,7 +34,7 @@ ARG FLAGS_SERVER
 ENV VITE_KEYCLOAK_SECRET=$KEYCLOAK_SECRET
 ENV VITE_COMMIT_HASH=$GIT_BUILD
 ENV VITE_GIT_TAG=$GIT_VERSION
-ENV VITE_FLAGS_COMPANY_ID=$FLAGS_COMPANY_ID
+ENV VITE_FLAGS_PROJECT_ID=$FLAGS_PROJECT_ID
 ENV VITE_FLAGS_AGENT_ID=$FLAGS_AGENT_ID
 ENV VITE_FLAGS_ENVIRONMENT_ID=$FLAGS_ENVIRONMENT_ID
 ENV VITE_FLAGS_API_SERVER=$FLAGS_SERVER
