feat: Initialize showFooter flag in Footer component
- Add useEffect to initialize showFooter flag
- Set showFooter flag to true on component mount

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@HC/*": ["./src/pages/Homepage/components/*"],
       "@DC/*": ["./src/pages/Dashboard/components/*"],
       "@DL/*": ["./src/pages/Dashboard/lib/*"],
+      "@DP/*": ["./src/pages/Dashboard/pages/*"],
     },
   },
   "include": ["src"],
