--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -35,8 +35,10 @@ ENV VITE_KEYCLOAK_SECRET=$KEYCLOAK_SECRET
 ENV VITE_COMMIT_HASH=$GIT_BUILD
 ENV VITE_GIT_TAG=$GIT_VERSION
 ENV VITE_FLAGS_PROJECT_ID=$FLAGS_PROJECT_ID
-ENV VITE_FLAGS_AGENT_ID=$FLAGS_AGENT_ID
-ENV VITE_FLAGS_ENVIRONMENT_ID=$FLAGS_ENVIRONMENT_ID
+ENV VITE_FLAGS_DASHBOARD_ID=$FLAGS_DASHBOARD_ID
+ENV VITE_FLAGS_DASHBOARD_ENVIRONMENT_ID=$FLAGS_DASHBOARD_ENVIRONMENT_ID
+ENV VITE_FLAGS_FRONTEND_ID=$FLAGS_FRONTEND_ID
+ENV VITE_FLAGS_FRONTEND_ENVIRONMENT_ID=$FLAGS_FRONTEND_ENVIRONMENT_ID
 ENV VITE_FLAGS_API_SERVER=$FLAGS_SERVER
 
 RUN pnpm build
