build: Updated environment variables for dashboard and frontend ID handling

--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -26,8 +26,10 @@ ARG KEYCLOAK_SECRET
 ARG GIT_BUILD
 ARG GIT_VERSION
 ARG FLAGS_PROJECT_ID
-ARG FLAGS_AGENT_ID
-ARG FLAGS_ENVIRONMENT_ID
+ARG FLAGS_DASHBOARD_ID
+ARG FLAGS_DASHBOARD_ENVIRONMENT_ID
+ARG FLAGS_FRONTEND_ID
+ARG FLAGS_FRONTEND_ENVIRONMENT_ID
 ARG FLAGS_SERVER
 
 ## Set Envs for build
