--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -30,6 +30,7 @@ ARG FLAGS_DASHBOARD_ID
 ARG FLAGS_DASHBOARD_ENVIRONMENT_ID
 ARG FLAGS_FRONTEND_ID
 ARG FLAGS_FRONTEND_ENVIRONMENT_ID
+ARG FLAGS_SERVER
 
 ## Set Envs for build
 ENV VITE_KEYCLOAK_SECRET=$KEYCLOAK_SECRET
@@ -40,6 +41,7 @@ ENV VITE_FLAGS_DASHBOARD_ID=$FLAGS_DASHBOARD_ID
 ENV VITE_FLAGS_DASHBOARD_ENVIRONMENT_ID=$FLAGS_DASHBOARD_ENVIRONMENT_ID
 ENV VITE_FLAGS_FRONTEND_ID=$FLAGS_FRONTEND_ID
 ENV VITE_FLAGS_FRONTEND_ENVIRONMENT_ID=$FLAGS_FRONTEND_ENVIRONMENT_ID
+ENV VITE_FLAGS_API_SERVER=$FLAGS_SERVER
 
 RUN pnpm build
 
