--- a/k8s/Containerfile
+++ b/k8s/Containerfile
@@ -26,6 +26,7 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 ARG KEYCLOAK_SECRET
 ARG GIT_BUILD
 ARG GIT_VERSION
+
 ARG FLAGS_PROJECT_ID
 ARG FLAGS_DASHBOARD_ID
 ARG FLAGS_DASHBOARD_ENVIRONMENT_ID
@@ -33,16 +34,29 @@ ARG FLAGS_FRONTEND_ID
 ARG FLAGS_FRONTEND_ENVIRONMENT_ID
 ARG FLAGS_SERVER
 
+ARG UPLOADTHING_KEY
+ARG UPLOADTHING_SECRET
+
+ARG STRIP_KEY
+ARG STRIP_SECRET
+
 ## Set Envs for build
 ENV VITE_KEYCLOAK_SECRET=$KEYCLOAK_SECRET
 ENV VITE_COMMIT_HASH=$GIT_BUILD
 ENV VITE_GIT_TAG=$GIT_VERSION
+
 ENV VITE_FLAGS_PROJECT_ID=$FLAGS_PROJECT_ID
 ENV VITE_FLAGS_DASHBOARD_ID=$FLAGS_DASHBOARD_ID
 ENV VITE_FLAGS_DASHBOARD_ENVIRONMENT_ID=$FLAGS_DASHBOARD_ENVIRONMENT_ID
 ENV VITE_FLAGS_FRONTEND_ID=$FLAGS_FRONTEND_ID
 ENV VITE_FLAGS_FRONTEND_ENVIRONMENT_ID=$FLAGS_FRONTEND_ENVIRONMENT_ID
 ENV VITE_FLAGS_API_SERVER=$FLAGS_SERVER
+
+ENV VITE_UPLOADTHING_APP_ID=$UPLOADTHING_KEY
+ENV VITE_UPLOADTHING_SECRET=$UPLOADTHING_SECRET
+
+ENV VITE_STRIPE_KEY=$STRIP_KEY
+ENV VITE_STRIPE_SECRET=$STRIP_SECRET
 
 RUN pnpm build
 
