--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@mui/material": "^5.15.20",
     "@mui/x-charts": "^7.6.2",
     "@phosphor-icons/react": "^2.1.5",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.5.0",
     "@tanstack/react-query": "^5.45.0",
     "@uploadthing/react": "^6.6.0",
     "apexcharts": "^3.49.1",
