--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.45.1",
     "@uploadthing/react": "^6.6.0",
     "apexcharts": "^3.49.1",
+    "countries-and-timezones": "^3.6.0",
     "jotai": "^2.8.3",
     "oidc-client-ts": "^3.0.1",
     "react": "^18.3.1",
