feat: Remove unnecessary components and functionality from dashboard
Removed CreateProject component and its dependencies as well as useChartOptions
function in Requests component to simplify the code and remove unused features.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@C/*": ["./src/components/*"],
-      "@HC/*": ["./src/pages/Homepage/components/*"],
-      "@DC/*": ["./src/pages/Dashboard/components/*"],
-      "@DL/*": ["./src/pages/Dashboard/lib/*"],
-      "@DP/*": ["./src/pages/Dashboard/pages/*"],
+      "@HC/*": ["./src/Homepage/components/*"],
+      "@H/*": ["./src/Homepage/*"],
     },
   },
   "include": ["src"],
