--- a/package.json
+++ b/package.json
@@ -11,33 +11,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/modifiers": "^7.0.0",
-    "@dnd-kit/react": "^0.0.5",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@flags-gg/react-library": "^1.6.1",
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
-    "@mui/x-charts": "^7.17.0",
     "@phosphor-icons/react": "^2.1.7",
-    "@stripe/react-stripe-js": "^2.8.0",
-    "@stripe/stripe-js": "^4.5.0",
     "@tanstack/react-query": "^5.56.2",
-    "@uploadthing/react": "^6.7.2",
-    "apexcharts": "^3.53.0",
-    "countries-and-timezones": "^3.6.0",
     "jotai": "^2.9.3",
-    "oidc-client-ts": "^3.0.1",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
-    "react-oidc-context": "^3.1.1",
-    "react-router-dom": "^6.26.2",
-    "uploadthing": "^6.13.2"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@react-buddy/ide-toolbox": "^2.4.0",
