--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -69,21 +69,17 @@ tasks:
         sh: cat .latest_tag
       COMMIT_HASH:
         sh: cat .commit_hash
-      KEYCLOAK_SECRET:
-        sh: cat keycloak.secret
   build-push-latest:
     cmds:
       - task: get-latest-tag
       - task: get-commit-hash
-      - nerdctl build --platform=amd64,arm64 --tag containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest --build-arg VERSION={{.LATEST_TAG}} --build-arg BUILD={{.COMMIT_HASH}} --build-arg SERVICE_NAME={{.SERVICE_NAME}} --build-arg KEYCLOAK_SECRET={{.KEYCLOAK_SECRET}} -f ./k8s/Containerfile .
+      - nerdctl build --platform=amd64,arm64 --tag containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest --build-arg VERSION={{.LATEST_TAG}} --build-arg BUILD={{.COMMIT_HASH}} --build-arg SERVICE_NAME={{.SERVICE_NAME}} -f ./k8s/Containerfile .
       - nerdctl push containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest --all-platforms
     vars:
       LATEST_TAG:
         sh: cat .latest_tag
       COMMIT_HASH:
         sh: cat .commit_hash
-      KEYCLOAK_SECRET:
-        sh: cat keycloak.secret
 
   build:
     cmds:
