build: Create .env.production file and update build process

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -73,6 +73,7 @@ tasks:
     cmds:
       - task: get-latest-tag
       - task: get-commit-hash
+      - task: build-images
       - nerdctl build --platform=amd64,arm64 --tag containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest --build-arg VERSION={{.LATEST_TAG}} --build-arg BUILD={{.COMMIT_HASH}} --build-arg SERVICE_NAME={{.SERVICE_NAME}} -f ./k8s/Containerfile .
       - nerdctl push containers.chewed-k8s.net/{{.NAMESPACE}}/{{.SERVICE_NAME}}:latest --all-platforms
     vars:
