added release drafter to pulls

--- a/.github/workflows/pulls.yml
+++ b/.github/workflows/pulls.yml
@@ -49,3 +49,15 @@ jobs:
       - uses: fastify/github-action-merge-dependabot@v3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+  update_release_draft:
+    needs:
+      - qodana
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+    steps:
+      - uses: release-drafter/release-drafter@v6
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
