remove qodana requirement

--- a/.github/workflows/drafter.yml
+++ b/.github/workflows/drafter.yml
@@ -19,15 +19,13 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
-      - name: 'Qodana Scan'
+      - name: "Qodana Scan"
         uses: JetBrains/qodana-action@v2023.3.2
         with:
           upload-result: true
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
   update_release_draft:
-    needs:
-      - qodana
     runs-on: ubuntu-latest
     permissions:
       contents: write
