--- a/.github/workflows/pulls.yml
+++ b/.github/workflows/pulls.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
-      - name: 'Qodana Scan'
+      - name: "Qodana Scan"
         uses: JetBrains/qodana-action@v2023.3.2
         with:
           upload-result: true
@@ -50,8 +50,6 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
   update_release_draft:
-    needs:
-      - qodana
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -60,4 +58,3 @@ jobs:
       - uses: release-drafter/release-drafter@v6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
