--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          persist-credentials: false
           fetch-depth: 1
       - name: Extract tag
         id: extract_tag
@@ -68,6 +69,7 @@ jobs:
             UPLOADTHING_KEY=${{ secrets.UPLOADTHING_KEY }}
             UPLOADTHING_SECRET=${{ secrets.UPLOADTHING_SECRET }}
             STRIP_KEY=${{ secrets.STRIP_KEY }}
+
 #  deploy:
 #    runs-on: ubuntu-latest
 #    needs: build
