--- a/.github/workflows/drafter.yml
+++ b/.github/workflows/drafter.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          persist-credentials: false
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
       - name: "Qodana Scan"
