--- a/.github/workflows/pulls.yml
+++ b/.github/workflows/pulls.yml
@@ -52,6 +52,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
   update_release_draft:
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: write
