--- a/.github/workflows/pulls.yml
+++ b/.github/workflows/pulls.yml
@@ -13,7 +13,7 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4test
+      - uses: actions/checkout@v4
         with:
           persist-credentials: false
           fetch-depth: 1
