--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@flags-gg/react-library": "^1.12.0",
+    "@flags-gg/react-library": "1.12.2",
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.17.1",
     "@phosphor-icons/react": "^2.1.7",
     "@tanstack/react-query": "^5.72.2",
     "jotai": "^2.12.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
